# kache

./: .gitattributes  .gitignore  .pinact.yaml  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  Makefile  README.md  SECURITY.md  deny.toml  docker-bake.hcl  flake.nix  issue-304-reply-draft.md  lovesegfault-review-status.md  mise.toml  twir-v0.6.0-entry.md  v0.6.0-release-notes-DRAFT.md
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  package-publish.yml  publish-crates.yaml  service-image.yml
apt_config/: distributions
assets/demo/: Dockerfile  README.md  clean.tape  demo.tape  monitor.tape
assets/demo/fixtures/project-a/: Cargo.toml
assets/demo/fixtures/project-a/src/: main.rs
aur/kache-bin/: PKGBUILD
bench-profiles/: README.md  firefox-cross-clone-plan.md  firefox-mozbuild-path-clean.patch  firefox.toml  substrate.toml
charts/kache-service/: Chart.yaml  values.schema.json  values.yaml
crates/kache-core/: Cargo.toml
crates/kache-e2e/: Cargo.toml
crates/kache-e2e/src/: assertions.rs  bench_profile.rs  bench_runner.rs  daemon.rs  fixture.rs  fixture_runner.rs  lib.rs  phase.rs  report.rs  result.rs  runner.rs  scenario.rs  scenario_runner.rs  source.rs
crates/kache-service/: Cargo.toml
docker/: e2e.Dockerfile  service.Dockerfile
docs/: benchmarks.mdx  deduplication.mdx  index.mdx  meta.json  monitor.mdx  remote-service.mdx
docs/commands/: reference.mdx
docs/daemon/: lifecycle.mdx  overview.mdx
docs/design/: v3-foundations.md
docs/getting-started/: c-cpp.mdx  configuration.mdx  installation.mdx  meta.json  quick-start.mdx
docs/how-it-works/: architecture.mdx  cache-key.mdx
docs/kache-docs/: deduplication.mdx  index.mdx  meta.json  monitor.mdx
docs/plans/: 2026-03-04-content-addressable-dedup-design.md  2026-03-04-content-addressable-dedup-plan.md
docs/remote-cache/: ci.mdx  s3-setup.mdx  sync.mdx
docs/site/: 00-overview.md  01-daemon-lifecycle.md  02-monitor-guide.md  03-deduplication.md  index.md
kache/: Cargo.toml
kache-protocol/: Cargo.toml
kache-protocol/src/: lib.rs
kache-server/: Cargo.toml
kache-server/src/: config.rs  db.rs  gc.rs  main.rs  miss.rs  prefetch.rs  proxy.rs  stats.rs
kache/src/: args.rs  cache_key.rs  cli.rs  config_tui.rs  daemon.rs  events.rs  remote.rs  service.rs  shards.rs  store.rs  tui.rs  wrapper.rs
kache/tests/: integration_test.rs
nix/: module.nix  package.nix
notes/: coverage-progress.md
notes/design/: daemon-local-hit.md  extra-inputs-central-table.md
scenarios/: COVERAGE.md  README.md
scenarios/bench-firefox/: cross-clone-plan.md  scenario.toml
scenarios/bench-firefox-pull/: scenario.toml
scenarios/bench-firefox-pull-windows/: scenario.toml
scenarios/bench-firefox-sccache/: scenario.toml
scenarios/bench-firefox-windows/: scenario.toml
scenarios/bench-llvm/: scenario.toml
scenarios/bench-substrate/: scenario.toml
scenarios/bench-surrealdb/: scenario.toml
scenarios/e2e-c-depinfo/: scenario.toml
scenarios/e2e-c-hello/: scenario.toml
scenarios/e2e-c-passthrough/: scenario.toml
scenarios/e2e-cc-bench-flags/: scenario.toml
scenarios/e2e-cc-bench-flags-gnu/: scenario.toml
scenarios/e2e-cc-cl-debug/: scenario.toml
scenarios/e2e-cc-cl-xclang-deps/: scenario.toml
scenarios/e2e-cc-file-macro-oot/: scenario.toml
scenarios/e2e-cc-flag-soup/: scenario.toml
scenarios/e2e-cc-multi-source/: scenario.toml
scenarios/e2e-cc-parallel/: scenario.toml
scenarios/e2e-cc-response-file/: scenario.toml
scenarios/e2e-cmake-file-macro-oot/: scenario.toml
scenarios/e2e-cmake-file-macro-oot/source/: CMakeLists.txt
scenarios/e2e-cmake-ninja-flagset/: scenario.toml
scenarios/e2e-cmake-ninja-flagset/source/: CMakeLists.txt  version.h.in
scenarios/e2e-cmake-ninja-flagset/source/src/: main.cpp
scenarios/e2e-cmake-out-of-tree/: scenario.toml
scenarios/e2e-cmake-out-of-tree/source/: CMakeLists.txt  version.h.in
scenarios/e2e-cmake-out-of-tree/source/src/: bar.h  foo.c
scenarios/e2e-cpp-hello/: scenario.toml
scenarios/e2e-exclude-c/: scenario.toml
scenarios/e2e-exclude-rust/: scenario.toml
scenarios/e2e-manifest-dir-runtime-workspace/: scenario.toml
scenarios/e2e-multi-dep/: scenario.toml
scenarios/e2e-out-dir-dual-pattern/: scenario.toml
scenarios/e2e-rust-debug-paths/source/: Cargo.toml
scenarios/e2e-rust-debug-paths/source/src/: lib.rs  main.rs
scenarios/e2e-rust-dep-cascade/source/: Cargo.toml
scenarios/e2e-rust-dep-cascade/source/crates/app/: Cargo.toml
scenarios/e2e-rust-dep-cascade/source/crates/app/src/: main.rs
scenarios/e2e-rust-dep-cascade/source/crates/leaf/: Cargo.toml
scenarios/e2e-rust-dep-cascade/source/crates/leaf/src/: lib.rs
scenarios/e2e-rust-dep-cascade/source/crates/mid/src/: lib.rs
scenarios/e2e-rust-flag-soup/source/: Cargo.toml
scenarios/e2e-rust-flag-soup/source/src/: main.rs
scenarios/e2e-rust-out-of-tree-target/source/: Cargo.toml  build.rs
scenarios/e2e-rust-out-of-tree-target/source/src/: main.rs
scripts/: check-release-tag-version.sh  check-version-consistency.sh  ci-monitor.sh  e2e-cc-smoke.sh  e2e-rust-smoke.sh  e2e-smoke.sh  sccache-fallback-check.sh
scripts/apt/: download-debs.sh  (+4 more)
src/: args.rs  atomic.rs  build_intent.rs  cache_key.rs  cli.rs  compile.rs  config.rs  config_tui.rs  daemon.rs  daemon_local.rs  events.rs  extra_inputs.rs  fallback_planner.rs  heartbeat.rs  link.rs  main.rs  native_archive.rs  opcounts.rs  path_normalizer.rs  planner_client.rs  platform.rs  remote.rs  remote_backend.rs  remote_layout.rs  remote_plan.rs  report.rs  service.rs  shards.rs  store.rs  transport.rs  tui.rs  wrapper.rs  wrapper_config.rs
test-projects/rust-sccache/: Cargo.toml  fb-sccache.sh  kache-fixture.toml
test-projects/rust-sccache/src/: main.rs
tests/: binstall_metadata_test.rs  cache_key_underkeying_test.rs  cc_family_probe_test.rs  cc_prefix_map_separator_test.rs  cli_commands_test.rs  integration_test.rs  stale_artifact_test.rs  unknown_compiler_probe_test.rs
(+166 files in other folders)
