[package]
name = "kache"
version = "0.0.0"
edition = "2024"
description = "Zero-copy, content-addressed Rust build cache. No copies, no wasted disk — just hardlinks locally and S3 for sharing."
license = "Apache-2.0"
repository = "https://github.com/kunobi-ninja/kache"
rust-version = "1.93"

[dependencies]
blake3 = "1"
aws-sdk-s3 = "1"
aws-config = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "fs", "io-util", "net", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
ratatui = "0.30"
crossterm = "0.29"
filetime = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
zstd = "0.13"
bytesize = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tar = "0.4"
futures = "0.3"
libc = "0.2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
warnings = "deny"

[lints.clippy]
permissions_set_readonly_false = "allow"
too_many_arguments = "allow"
