[package]
name = "kache-e2e"
version = "0.5.1-rc.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kunobi-ninja/kache"
rust-version = "1.95"
publish = false
description = "End-to-end test harness for kache: drives example projects through cold/warm/noop and asserts against kache's own JSON report."
autobins = false

[[bin]]
name = "kache-scenario"
path = "src/bin/kache-scenario.rs"

[[bin]]
name = "e2e-fallback"
path = "src/bin/e2e-fallback.rs"

[[bin]]
name = "kache-cc"
path = "src/bin/kache-cc.rs"

[[bin]]
name = "kache-cxx"
path = "src/bin/kache-cxx.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "1"

[lints.rust]
warnings = "deny"
