[package]
name = "project-a"
version = "0.1.0"
edition = "2021"

# Tiny synthetic project. The point isn't the leaf binary — it's
# watching cargo populate the kache store cold and then restore every
# artifact via hardlinks on the next build.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
